website-stack/santos-web/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: santos-web
  namespace: santos-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: santos-web
  template:
    metadata:
      labels:
        app: santos-web
    spec:
      containers:
        - name: santos-web
          image: jtmb92/santos-web:latest # Replace with your actual image
          ports:
            - containerPort: 80
