website-stack/santos-web/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: santos-web-ingress
  namespace: website-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: santos-web.rancher-dev.branconet.lan # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: santos-web-service
                port:
                  number: 80
